[package]
name = "barents"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "barents"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
thiserror = { version = "1.0.48" }
url = "2.4.1"
chrono = "0.4.31"
env_logger = "0.10.0"
log = "0.4.20"
dotenv = "0.15.0"
